<?xml version="1.0"?>
<package>
  <name>subt_description</name>
  <version>0.0.1</version>
  <description>Common robot description files for SubT</description>

  <author email="caguero@openrobotics.org">Carlos Aguero</author>
  <author email="cole@openrobotics.org">Cole Biesemeyer</author>
  <author email="addisu@openrobotics.org">Addisu Z. Taddese</author>
  <maintainer email="caguero@openrobotics.org">Carlos Aguero</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
