<package format="2">
  <name>subt_example</name>
  <version>0.1.0</version>
  <description>A reference participant for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>subt_ign</depend>
  <depend>subt_communication_broker</depend>
  <depend>x1_description</depend>
  <depend>x2_description</depend>
  <depend>x3_description</depend>
  <depend>x4_description</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
