<package format="2">
  <name>subt_gazebo</name>
  <version>0.1.0</version>
  <description>The ROS package for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
